# QtNetworkFun

./: CMakeLists.txt  README.md
src/: exec.sh  main.cpp  testwindow.cpp  testwindow.h
src/client/: clientgui.cpp  clientgui.h  clientlib.cpp  clientlib.h  maingui.cpp
src/common/icons/: breeze-icons-dark.rcc  breeze-icons.rcc  iconloader.cpp  iconloader.h
src/common/kommunicator/: kommunicator.cpp  kommunicator.h
src/common/project_information/: project_information.h.in
src/common/userdata/: userdata.cpp  userdata.h
src/server/: maincli.cpp  maingui.cpp  servercli.cpp  servercli.h  servergui.cpp  servergui.h  serverlib.cpp  serverlib.h
